// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TSCard card"
      subtitle="Subtitle"
      title="Title"
    >
      <div
        className="cardHeader card-header"
      >
        Header
      </div>
      <hr
        className="cardDivider"
      />
      <div
        className="TScardBody  card-body"
      >
        
        
        <span
          className="card-text"
        >
          This is the body
        </span>
      </div>
      <div
        className="text-muted card-footer"
      >
        Footer
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Card Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TSCard card"
      subtitle=""
      title=""
    >
      
      <div
        className="TScardBody  card-body"
      >
        
        
        <span
          className="card-text"
        >
          
        </span>
      </div>
      
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots CountryCard Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="countryCardHeader card-header"
      >
        <img
          alt=""
          src="https://www.countryflags.io/fr/flat/64.png"
        />
        <div
          className="countryCardTitle"
        >
          Title
        </div>
      </div>
      <div
        className="countryCardBody card-body"
      >
        <p
          className="card-text"
        >
          This is the body
        </p>
      </div>
      <div
        className="countryCardFooter card-footer"
      >
        <div>
          
        </div>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots CountryCard Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="countryCardHeader card-header"
      >
        <img
          alt=""
          src="https://www.countryflags.io/dk/flat/64.png"
        />
        <div
          className="countryCardTitle"
        >
          
        </div>
      </div>
      <div
        className="countryCardBody card-body"
      >
        <p
          className="card-text"
        >
          
        </p>
      </div>
      <div
        className="countryCardFooter card-footer"
      >
        <div>
          
        </div>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="AppHeaderWrapper"
    >
      <div
        className="justify-content-center row"
      >
        <div
          className="col-lg-8"
          style={
            Object {
              "border": "5px solid white",
              "borderRadius": "20px 20px 0 0",
            }
          }
        >
          <div
            className="AppHeader"
            style={
              Object {
                "height": "420px",
              }
            }
            subtitle="France"
          >
            <div
              className="overlay"
            />
            <video
              autoPlay={true}
              className="videoHeader"
              loop={true}
              muted={true}
            >
              <source
                src="FR.mp4"
                type="video/mp4"
              />
            </video>
            <div
              className="country"
            >
              Paris
            </div>
            <div
              className="city"
            >
              TimeZone
            </div>
            <div
              className="time"
            >
              TimeDifference
            </div>
            <div
              className="text-center"
            >
              <button
                className="subscribe btn btn-outline-primary"
                disabled={false}
                onClick=""
                type="button"
              >
                Stay Informed
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="AppHeaderWrapper"
    >
      <div
        className="justify-content-center row"
      >
        <div
          className="col-lg-8"
          style={
            Object {
              "border": "5px solid white",
              "borderRadius": "20px 20px 0 0",
            }
          }
        >
          <div
            className="AppHeader"
            style={
              Object {
                "height": "420px",
              }
            }
            subtitle="France"
          >
            <div
              className="overlay"
            />
            <video
              autoPlay={true}
              className="videoHeader"
              loop={true}
              muted={true}
            >
              <source
                src="FR.mp4"
                type="video/mp4"
              />
            </video>
            <div
              className="country"
            >
              Paris
            </div>
            <div
              className="city"
            >
              TimeZone
            </div>
            <div
              className="time"
            >
              TimeDifference
            </div>
            <div
              className="text-center"
            >
              <button
                className="subscribe btn btn-outline-primary"
                disabled={false}
                onClick=""
                type="button"
              >
                Stay Informed
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Navbar Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="Navbar navbar navbar-expand navbar-dark fixed-top"
      textRight="Login"
    >
      <span
        className="navbar-brand"
        href=""
      >
        <img
          alt=""
          className="d-inline-block align-top"
          height="45"
          src="logo.png"
          width="45"
        />
        <span
          className="title navbar-text"
        >
          Traveling Strategy
        </span>
      </span>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
      >
        <span
          className="navbar-text"
        >
          <button
            className="btn btn-outline-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <strong>
              Login
            </strong>
          </button>
        </span>
      </div>
    </nav>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Navbar Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="Navbar navbar navbar-expand navbar-dark fixed-top"
      textRight="Login"
    >
      <span
        className="navbar-brand"
        href=""
      >
        <img
          alt=""
          className="d-inline-block align-top"
          height="45"
          src="logo.png"
          width="45"
        />
        <span
          className="title navbar-text"
        >
          Traveling Strategy
        </span>
      </span>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
      >
        <span
          className="navbar-text"
        >
          <button
            className="btn btn-outline-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <strong>
              Login
            </strong>
          </button>
        </span>
      </div>
    </nav>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots RateCalculator Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="RateCalculator card"
    >
      <div
        className="title card-header"
      >
        Rate Converter
      </div>
      <div
        className="card-body"
      >
        <div
          className="form-group row"
        >
          <div
            className="col-sm-7"
          >
            <input
              className="form-control"
              defaultValue="1"
              onInput={[Function]}
            />
          </div>
          <label
            className="form-label col-form-label col-sm-5"
          >
            CAD
          </label>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-7"
          >
            <div
              className="result"
            >
              1.32
            </div>
          </label>
          <label
            className="form-label col-form-label col-sm-5"
          >
            USD
          </label>
        </div>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots RateCalculator Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="RateCalculator card"
    >
      <div
        className="title card-header"
      >
        Rate Converter
      </div>
      <div
        className="card-body"
      >
        <div
          className="form-group row"
        >
          <div
            className="col-sm-7"
          >
            <input
              className="form-control"
              defaultValue="1"
              onInput={[Function]}
            />
          </div>
          <label
            className="form-label col-form-label col-sm-5"
          >
            CAD
          </label>
        </div>
        <div
          className="form-group row"
        >
          <label
            className="form-label col-form-label col-sm-7"
          >
            <div
              className="result"
            >
              1.32
            </div>
          </label>
          <label
            className="form-label col-form-label col-sm-5"
          >
            USD
          </label>
        </div>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Subtitle Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="section"
    >
      <div
        className="subtitle"
      >
        Health & Safety
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Subtitle Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="subtitle"
    >
      
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Toast Basic Toast 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="fade toast TSToast  show"
      role="alert"
    >
      <div
        className="toast-header"
      >
        <strong
          className="mr-auto "
        >
            
          Toast Title
        </strong>
        <button
          className="close ml-2 mb-1"
          data-dismiss="toast"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
          <span
            className="sr-only"
          >
            Close
          </span>
        </button>
      </div>
      <div
        className="toast-body"
      >
        Body of Toast
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Toast Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="fade toast TSToast  show"
      role="alert"
    >
      <div
        className="toast-header"
      >
        <strong
          className="mr-auto "
        >
            
          Title
        </strong>
        <button
          className="close ml-2 mb-1"
          data-dismiss="toast"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
          <span
            className="sr-only"
          >
            Close
          </span>
        </button>
      </div>
      <div
        className="toast-body"
      >
        Toast Body
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Toast Toast of type "alert" 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      className="fade toast TSToast alertToast show"
      role="alert"
    >
      <div
        className="toast-header"
      >
        <strong
          className="mr-auto "
        >
            
          Toast Title
        </strong>
        <button
          className="close ml-2 mb-1"
          data-dismiss="toast"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
          <span
            className="sr-only"
          >
            Close
          </span>
        </button>
      </div>
      <div
        className="toast-body"
      >
        Body of Toast
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;
